--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -4,6 +4,8 @@
   background-color: black;
   color: white;
   position: fixed;
+  align-items: center;
+  padding: 0px 20px;
 
   top: 0;
   left: 0;
@@ -15,5 +17,14 @@
 .heading {
 }
 
+.links a {
+  color: aliceblue;
+  margin-left: 10px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
 .links {
+  display: flex;
+  margin-right: 30px;
 }
