--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,4 +1,4 @@
-.product {
+/* .product {
   height: 400px;
   background-color: beige;
   display: grid;
@@ -21,4 +21,51 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+} */
+
+.cardDiv {
+  display: inline-block;
+  margin: 10px;
+  width: 300px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.cardDiv:hover {
+  box-shadow: 0 12px 14px rgba(0, 0, 0, 0.1);
+}
+
+.products {
+  padding: 10px;
+}
+.headingText a {
+  text-decoration: none;
+  color: black;
+}
+
+.headingText {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis; /* display ... at the end */
+  white-space: nowrap; /* prevent the text from wrapping */
+  text-decoration: none;
+}
+
+.products p {
+  font-size: 1rem;
+  margin: 0;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis; /* display ... at the end */
+  white-space: nowrap; /* prevent the text from wrapping */
+}
+
+.image {
+  display: block;
+  /* border: 1px solid #f9f9f9; */
+  width: 100%;
+  height: 200px; /* set a fixed height */
+  object-fit: contain; /* crop the image to fit the box */
 }
