--- a/src/Pages/Categories/Categories.css
+++ b/src/Pages/Categories/Categories.css
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("./1.jpg");
+  /* background-image: url("./1.jpg"); */
   background-size: cover;
   background-position: center;
   height: 100vh;
