--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -6,12 +6,10 @@
   position: fixed;
   align-items: center;
   padding: 0px 20px;
-
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 2; /* increase the z-index to bring it to the front */
-  /* other styles for the navbar */
+  z-index: 2;
 }
 
 .heading {
